# weather-seasonal-particles

./: .env.example  .gitignore  CNAME  LICENSE  README.md  app.py  config.py  git.gitignore  index.html  pack.py  pyproject.toml  term_mapping.py  weather_api.py
.github/workflows/: test.yml
docs/: AI_COLLABORATION.md  DEVELOPMENT_LOG.md  FUTURE_POTENTAL.md
src/weather_particles/: app.py
src/weather_particles/api/: weather_api.py
src/weather_particles/core/: config.py  term_mapping.py
src/weather_particles/renderer/: canvas_builder.py
tests/: test_mapping.py  test_weather_api.py
