[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-seasonal-particles"
version = "0.1.0"
description = "基于实时天气数据驱动的节气意象粒子可视化系统"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/Drime-A202/weather-seasonal-particles"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- src-layout 包发现配置 ----------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ---------- pytest 配置 ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]